--- a/apps.html
+++ b/apps.html
@@ -22,14 +22,14 @@
   </div>
   <div class="column">
     <div class="content">
-    <img src="https://i.imghippo.com/files/NTN241723056962.jpg" alt="Lights" style="width:100%">
+    <img src="https://i.imghippo.com/files/PewMm1724261901.jpg" alt="Lights" style="width:100%">
       <h3>Taybat Mandi Menu</h3>
       <hr>
       
     <h3>Ferkari Video</h3>
   </div>
       <video width="320" height="240" controls>
-   <source src="https://i.imghippo.com/files/rkJ1s1723052627.mp4">
+   <source src="https://i.imghippo.com/files/gC7Oo1724261989.jpg">
       </video
 <p>Ferkari Ziadkrdni Ranga Kalakan</p>
   
