--- a/apps.html
+++ b/apps.html
@@ -25,6 +25,14 @@
     <img src="https://i.imghippo.com/files/PewMm1724261901.jpg" alt="Lights" style="width:100%">
       <h3>Taybat Mandi Menu</h3>
       <hr>
+      <hr>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+    <img src="https://i.imghippo.com/files/PewMm1724261901.jpg" alt="Lights" style="width:100%">
+      <h3>Taybat Mandi Menu</h3>
+      <hr>
       
     <h3>Ferkari Video</h3>
   </div>
