--- a/apps.html
+++ b/apps.html
@@ -1,4 +1,11 @@
-<body>
+<hr>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+    <img src="https://i.imghippo.com/files/PewMm1724261901.jpg" alt="Lights" style="width:100%">
+      <h3>Taybat Mandi Menu</h3>
+      <hr><body>
 
 <!-- MAIN (Center website) -->
 <div class="main">
@@ -25,7 +32,7 @@
     <img src="https://i.imghippo.com/files/PewMm1724261901.jpg" alt="Lights" style="width:100%">
       <h3>Taybat Mandi Menu</h3>
       <hr>
-      <hr>
+    
     </div>
   </div>
   <div class="column">
