--- a/apps.html
+++ b/apps.html
@@ -29,6 +29,13 @@
     <img src="https://i.imghippo.com/files/gC7Oo1724261989.jpg" alt="Lights" style="width:100%">
       <h3>Taybat Mandi Menu</h3>
       <hr>
+      </div>
+  </div>
+  <div class="column">
+    <div class="content">
+    <img src="https://i.imghippo.com/files/MkY2H1724262373.jpg" alt="Lights" style="width:100%">
+      <h3>Taybat Mandi Menu</h3>
+      <hr>
       
     <h3>Ferkari Video</h3>
   </div>
