--- a/apps.html
+++ b/apps.html
@@ -1,3 +1,29 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+​
+body {
+  margin: 0;
+  font-family: Arial;
+  font-size: 17px;
+}
+​
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+}
+​
+.content {
+
+
 <html lang="ckb">
 <h1>Ba Sheway Wena</h1>
 <html lang="ckb"
