--- a/apps.html
+++ b/apps.html
@@ -1,3 +1,27 @@
+​
+#myBtn {
+  width: 200px;
+  font-size: 18px;
+  padding: 10px;
+  border: none;
+  background: #000;
+  color: #fff;
+  cursor: pointer;
+}
+​
+#myBtn:hover {
+  background: #ddd;
+  color: black;
+}
+</style>
+</head>
+<body>
+​
+<video autoplay muted loop id="myVideo">
+  <source src="https://i.imghippo.com/files/9V2zq1723052946.mp4" type="video/mp4">
+  Your browser does not support HTML5 video.
+</video>
+  
 
 <h1>Ba Sheway Wena</h1>
 
