--- a/apps.html
+++ b/apps.html
@@ -33,3 +33,23 @@
   </div>
   <div class="column">
     <div class="content">
+
+      <h3>Ferkari Video</h3>
+  </div>
+      <video width="320" height="240" controls>
+   <source src="https://i.imghippo.com/files/rkJ1s1723052627.mp4">
+      </video
+<p>Ferkari Ziadkrdni Ranga Kalakan</p>
+  
+  </div>
+      <video width="320" height="240" controls>
+   <source src="https://i.imghippo.com/files/oqAX71723053333.mp4">
+      </video
+<p>Ferkari Dagrtni Strike u Score</p>
+  </div>
+      <video width="320" height="240" controls>
+   <source src="https://i.imghippo.com/files/9V2zq1723052946.mp4">
+      </video
+<p>Ferkari Dagrtni Storie & Spotlight & Discover</p>
+      
+
