--- a/apps.html
+++ b/apps.html
@@ -37,19 +37,19 @@
       <h3>Ferkari Video</h3>
   </div>
       <video width="320" height="240" controls>
-   <source src="https://i.imghippo.com/files/rkJ1s1723052627.mp4">
+   <source src="https://i.imghippo.com/files/3vZRp1729163211.mp4">
       </video
 <p>Ferkari Ziadkrdni Ranga Kalakan</p>
   
   </div>
       <video width="320" height="240" controls>
-   <source src="https://i.imghippo.com/files/oqAX71723053333.mp4">
+   <source src="https://i.imghippo.com/files/1nWPf1729162972.mp4">
       </video
 <p>Ferkari Dagrtni Strike u Score</p>
   </div>
       <video width="320" height="240" controls>
-   <source src="https://i.imghippo.com/files/9V2zq1723052946.mp4">
+   <source src="https://i.imghippo.com/files/gAwXU1729163151.mp4">
       </video
-<p>Ferkari Dagrtni Storie & Spotlight &  Discover</p>
+<p>Ferkari Dagrtni Storie & Spotlight & Discoveer</p>
       
 
